# Thesis

./: .gitignore  README.md  alternate_logic.php  diff_regex_engine.php  index.php  jmeter-file.jmx  limit_backtrack.php  php.ini  re2.cpp  regex-examples.json  regex.php  repair_regex.php  set_time_limit.php  test.js  test.php  timeout.php  validate.html  validate_input.php
payloads/: jmeter-file.jmx  malicious_dataset.jmx
re2_extension/: CMakeLists.txt  MyWebServer
re2_extension/src/: main.cpp
regex_matching/: Cargo.toml
regex_matching/src/: main.rs
rust_regex_implementation/: Cargo.toml
